[package]
name = "common"
version = "1.0.4"
edition = "2021"
license = "MIT"
description = "Common datatypes which are used in the Ociswap core pools"
repository = "https://github.com/ociswap/ociswap-common"

[dependencies]
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1" }
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1" }
scrypto_math = { git = "https://github.com/ociswap/scrypto-math", tag = "v0.4.0" }
pretty_assertions = "1.3.0"

[features]
default = []
test = []

[profile.dev]
opt-level = 'z'
lto = false
codegen-units = 1
panic = 'abort'
strip = true
overflow-checks = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
overflow-checks = true