[package]
name = "common"
version = "1.0.5"
edition = "2021"
license = "MIT"
description = "Common datatypes which are used in the Ociswap core pools"
repository = "https://github.com/ociswap/ociswap-common"

[dependencies]
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1" }
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1" }

[dev-dependencies]
pretty_assertions = "1.3.0"
