[package]
name = "common"
version = "1.2.3"
edition = "2021"
license = "MIT"
description = "Common datatypes which are used in the Ociswap core pools"
repository = "https://github.com/ociswap/ociswap-common"

[dependencies]
sbor = "1.2.0"
scrypto = "1.2.0"

[dev-dependencies]
pretty_assertions = "1.3.0"
